fixed alignment in hero

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -150,6 +150,7 @@ h2 {
   font-weight: var(--fw-light);
   line-height: 1.5;
   text-wrap: pretty;
+  text-align: justify;
 }
 
 main {
